added discussie.html file

--- a/Belastingdienst/imd/content.html
+++ b/Belastingdienst/imd/content.html
@@ -63,6 +63,18 @@
                         <th>Conformiteitsdoel</th>
                         <td>WCAG 2.1 niveau AA</td>
                     </tr>
+                    <tr>
+                        <th>Redactie</th>
+                        <td><a href="content.html">Punten voor de redactie</a></td>
+                    </tr>
+                    <tr>
+                        <th>Leverancier</th>
+                        <td><a href="leverancier.html">Punten voor pleio</a></td>
+                    </tr>
+                    <tr>
+                        <th>Discussie</th>
+                        <td><a href="discussie.html">Discussiepunten</a></td>
+                    </tr>
                 </tbody>
             </table>
 
