--- a/Belastingdienst/imd/index.html
+++ b/Belastingdienst/imd/index.html
@@ -48,11 +48,15 @@
               <tr>
                 <th>Redactie</th>
                 <td><a href="content.html">Punten voor de redactie</a></td>
-              </tr>
-              <tr>
+            </tr>
+            <tr>
                 <th>Leverancier</th>
                 <td><a href="leverancier.html">Punten voor pleio</a></td>
-              </tr>
+            </tr>
+            <tr>
+                <th>Discussie</th>
+                <td><a href="discussie.html">Discussiepunten</a></td>
+            </tr>
             </tbody>
           </table>
   
