--- a/Belastingdienst/imd/leverancier.html
+++ b/Belastingdienst/imd/leverancier.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="robots" content="noindex, nofollow">
-    <title>Alleen de bevindingen - Content-audit digitale toegankelijkheid website Pleio Intermediairdagen</title>
+    <title>Intermediairdagen - leverancier</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="description" content="Toegankelijkheidsonderzoeken">
+    <meta name="description" content="leverancierspunten">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="../../css/style.css" media="all">
 
@@ -14,16 +14,7 @@
 </head>
 
 <body>
-    <div class="site-container">
-        <header>
-            <div>
-                <span class="h">Toegankelijkheidsonderzoek</span>
-                <!--
-          <span class="h">Toegankelijkheidscertificaat</span>  
-          <span class="h">Quickscan toegankelijkheid</span>
-  -->
-            </div>
-        </header>
+
         <main>
             <h1>Issues: <br>Content-audit digitale toegankelijkheid website Pleio Intermediairdagen</h1>
             <p>(Alleen de bevindingen)</p>
@@ -190,7 +181,7 @@
                 element.</p>
            
         </main>
-    </div>
+
    
 </body>
 
