--- a/Belastingdienst/imd/discussie.html
+++ b/Belastingdienst/imd/discussie.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="robots" content="noindex, nofollow">
-    <title>Alleen de bevindingen - Content-audit digitale toegankelijkheid website Pleio Intermediairdagen</title>
+    <title>Pleio Intermediairdagen - Discussiepunten</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Toegankelijkheidsonderzoeken">
     <meta name="theme-color" content="#ffffff">
@@ -14,16 +14,8 @@
 </head>
 
 <body>
-    <div class="site-container">
-        <header>
-            <div>
-                <span class="h">Toegankelijkheidsonderzoek</span>
-                <!--
-          <span class="h">Toegankelijkheidscertificaat</span>  
-          <span class="h">Quickscan toegankelijkheid</span>
-  -->
-            </div>
-        </header>
+
+       
         <main>
             <h1>Issues: <br>Content-audit digitale toegankelijkheid website Pleio Intermediairdagen</h1>
             <p>(Alleen de bevindingen)</p>
@@ -100,7 +92,7 @@
                 met het role-attribuut of door deze op te maken met het input-element.</p></div>
             
         </main>
-    </div>
+ 
   
 
 </body>
