--- a/Belastingdienst/imd/content.html
+++ b/Belastingdienst/imd/content.html
@@ -22,7 +22,7 @@
             <table>
                 <tbody>
                     <tr>
-                        <th>Naam website</th>
+                        <th>Naam website.</th>
                         <td>Pleio Intermediairdagen</td>
                     </tr>
                     <tr>
