new tests and changes

--- a/Belastingdienst/imd/content.html
+++ b/Belastingdienst/imd/content.html
@@ -212,6 +212,15 @@
                 <p class="failed">
                     Uitkomst: Onvoldoende
                 </p>
+            </div>          
+            <p><strong>Bevinding 16:</strong> De blauwe tekst op pagina <a target="_blank" class="urlBreak" rel="nofollow"
+                    href="https://imd.pleio.nl/questions/add">imd.pleio.nl/questions/add</a> heeft een te
+                laag contrast. De contrastratio tussen de blauwe tekst (HEX #009EE3) en de witte achtergrond is 3:1 waar
+                dat minimaal 4,5:1 moet zijn. Ditzelfde probleem komt voor in de dialoogvensters die verschijnen wanneer
+                bezoekers op 'Voeg afbeelding in' of op 'Voeg video in' klikken. Ditzelfde geldt voor de knop
+                'Publiceer', met witte tekst op een blauwe achtergrond, op dezelfde pagina.</p>
+            <div class="solution">
+                <p>In de instellingen is deze waarde aan te passen, is #037CB1 een goede waarde? Dit voldoet...</p>
             </div>
             <p><strong>Bevinding 17:</strong> De titel van pagina <a target="_blank" class="urlBreak" rel="nofollow"
                     href="https://imd.pleio.nl/cms/view/56bba82a-926e-402a-9cd3-937e956fbf74/inkomstenbelasting">imd.pleio.nl/cms/view/56bba82a-926e-402a-9cd3-937e956fbf74/inkomstenbelasting</a>
