--- a/Belastingdienst/imd/discussie.html
+++ b/Belastingdienst/imd/discussie.html
@@ -72,25 +72,13 @@
 
             <h2>Uitgebreide toetsresultaten</h2>
 
-            <h3 id="robust">4. Robuust</h3>
-            <h4 id="compatible">4.1 Compatibel</h4>
-            <h5 id="name-role-value">4.1.2 Naam, rol, waarde (Niveau A)</h5>
-            <p class="readMore">Informatie over succescriterium <a href="https://www.w3.org/TR/WCAG21/#name-role-value"
-                    target="_blank">4.1.2 Naam, rol, waarde</a></p>
-            <div class="outcome">
-                <p class="failed">
-                    Uitkomst: Onvoldoende
-                </p>
-            </div>
+            <div class="discussion"><p><strong>Bevinding 14:</strong> Deze bevinding is mogelijk technisch van aard:<br>Op pagina <a target="_blank"
+                class="urlBreak" rel="nofollow" href="https://imd.pleio.nl/questions/add">imd.pleio.nl/questions/add</a>
+            verschijnt een pop-up
+            wanneer op de knop ‘Voeg hyperlink toe’ is gedrukt. In de pop-up staat een keuzevakje zonder
+            toegankelijk naam. Bezoekers die het scherm niet kunnen zien weten niet waar dit keuzevakje voor dient.
+            Geef het keuzevakje een label om dit op te lossen.</p></div>
            
-            <div class="discussion"><p><strong>Bevinding 22:</strong> Deze bevinding is mogelijk technisch van aard:<br>De tekstinvoervelden op
-                pagina <a target="_blank" class="urlBreak" rel="nofollow"
-                    href="https://imd.pleio.nl/questions/add">imd.pleio.nl/questions/add</a> zijn opgemaakt met een
-                p-element, bijvoorbeeld 'Inleiding'. Deze velden hebben hierdoor de rol 'paragraaf'. Het kan voor
-                screenreadergebruikers lastig zijn te bepalen dat dit invoervelden zijn, ook omdat de invoervelden niet
-                gekoppeld zijn aan hun visuele labels (zie SC 1.3.1). Geef de invoervelden een goede rol, bijvoorbeeld
-                met het role-attribuut of door deze op te maken met het input-element.</p></div>
-            
         </main>
  
   
