--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <h1>alle toetsen</h1>
 <ul>
     <li><a href="Belastingdienst/imd/index.html">imd</a></li>
+    <li><a href="Belastingdienst/goedestart/index.html">goedestart</a></li>
+    <li><a href="lerenvandecoronacrisis/index.html">lerenvandecoronacrisis</a></li>
     <li>test</li>
 </ul>
     </body>
