--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/print.css" media="print">
 </head>
   <body>
-<h1>alle toetsen</h1>
+<h1>Alle toetsen</h1>
 <ul>
     <li><a href="Belastingdienst/imd/index.html">imd</a></li>
     <li><a href="Belastingdienst/goedestart/index.html">goedestart</a></li>
