--- a/lerenvandecoronacrisis/discussie.html
+++ b/lerenvandecoronacrisis/discussie.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="robots" content="noindex, nofollow">
-  <title>Alleen de bevindingen - Content-audit digitale toegankelijkheid website lerenvandecoronacrisis.nl</title>
+  <title>Discussie - lerenvandecoronacrisis.nl</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="description" content="Toegankelijkheidsonderzoeken" />
   <meta name="theme-color" content="#ffffff">
@@ -33,16 +33,7 @@
           <tr>
             <th>Scope van de website</th>
             <td>
-              <!-- for -->
-              Binnen de scope van het onderzoek valt:<br>
-              <ul>
-                <li>De content op het domein lerenvandecoronacrisis.nl.</li>
-              </ul>Buiten de scope van het onderzoek valt:<br>
-              <ul>
-                <li>Subwebsite(s) waarbij de HTML en/of het systeem afwijkt van de onderzochte website.</li>
-                <li>Alle externe systemen en websites waar via lerenvandecoronacrisis.nl met een link naar wordt
-                  verwezen.</li>
-              </ul>
+              Punten die we nog moeten verduidelijken
             </td>
           </tr>
           <tr>
@@ -57,7 +48,7 @@
             <th>Leverancier</th>
             <td><a href="leverancier.html">Punten voor pleio</a></td>
           </tr>
-         
+
         </tbody>
       </table>
 
@@ -74,7 +65,7 @@
         </p>
       </div>
 
-      
+
       <p><strong>Bevinding 6:</strong> Deze bevinding is mogelijk technisch van aard:</p>
       <p>De combobox 'Opdrachtgever onderzoek' op pagina <a target="_blank" class="urlBreak" rel="nofollow"
           href="https://lerenvandecoronacrisis.nl/search?q=vaccinatie">lerenvandecoronacrisis.nl/search</a> heeft geen
@@ -88,7 +79,8 @@
         <li><a target="_blank" class="urlBreak" rel="nofollow"
             href="https://lerenvandecoronacrisis.nl/user/20256df2-bdcd-4ea2-90cb-b459f6d78fc9/settings">lerenvandecoronacrisis.nl/user/20256df2-bdcd-4ea2-90cb-b459f6d78fc9/settings</a>
         </li>
-      </ul>  <p><strong>Bevinding 13:</strong> Op pagina <a target="_blank" class="urlBreak" rel="nofollow"
+      </ul>
+      <p><strong>Bevinding 13:</strong> Op pagina <a target="_blank" class="urlBreak" rel="nofollow"
           href="https://lerenvandecoronacrisis.nl/cms/view/20878e08-50c0-436c-bfc2-2137fd92058d/contact">lerenvandecoronacrisis.nl/cms/view/20878e08-50c0-436c-bfc2-2137fd92058d/contact</a>
         is de kop 'Mis je een onderzoek?' ook een linktekst. Dit is geen beschrijvend linkdoel. Aangezien de link 'Meld
         een onderzoek aan' naar dezelfde pagina verwijst kan de link op de koptekst verwijderd worden om dit probleem op
