latest findings added

--- a/lerenvandecoronacrisis/leverancier.html
+++ b/lerenvandecoronacrisis/leverancier.html
@@ -154,6 +154,21 @@
           Uitkomst: Onvoldoende
         </p>
       </div>
+      <h4 id="input-modalities">2.5 Input modaliteiten</h4>
+      <h5 id="label-in-name">2.5.3 Label in naam (Niveau A)</h5>
+      <p class="readMore">Informatie over succescriterium <a href="https://www.w3.org/TR/WCAG21/#label-in-name"
+          target="_blank">2.5.3 Label in naam</a></p>
+      <div class="outcome">
+        <p class="failed">
+          Uitkomst: Onvoldoende
+        </p>
+      </div>
+      <p><strong>Bevinding 14:</strong> Op pagina <a target="_blank" class="urlBreak" rel="nofollow"
+          href="https://lerenvandecoronacrisis.nl/cms/view/d55a4ac7-8780-4385-a28d-9bc355758a09/themas">lerenvandecoronacrisis.nl/cms/view/d55a4ac7-8780-4385-a28d-9bc355758a09/themas</a>
+        komen meerdere visuele 'Lees meer' linkteksten voor. Deze teksten komen niet voor in toegankelijke linknamen.
+        Hierdoor zijn de links moeilijk of niet bedienbaar voor bezoekers die gebruik maken van spraakgestuurde
+        navigatie. Verwijder de teksten, of verwerk ze in de toegankelijke linknamen om dit probleem op te lossen,</p>
+
 
   </div>
 
