added link to new pages

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html lang="nl"><head>
+<html lang="nl">
+
+<head>
     <meta charset="utf-8">
     <meta name="robots" content="noindex, nofollow">
     <title> Content-audit digitale toegankelijkheid</title>
@@ -6,17 +8,20 @@
     <meta name="description" content="Toegankelijkheidsonderzoeken">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="css/style.css" media="all">
- 
-  
+
+
     <link rel="stylesheet" href="css/print.css" media="print">
 </head>
-  <body>
-<h1>Alle toetsen</h1>
-<ul>
-    <li><a href="Belastingdienst/imd/index.html">imd</a></li>
-    <li><a href="Belastingdienst/goedestart/index.html">goedestart</a></li>
-    <li><a href="lerenvandecoronacrisis/index.html">lerenvandecoronacrisis</a></li>
-    <li>test</li>
-</ul>
-    </body>
-    </html>
+
+<body>
+    <h1>Alle toetsen</h1>
+    <ul>
+        <li><a href="Belastingdienst/imd-20221004/index.html">imd 4 oktober 2022</a></li>
+        <li><a href="Belastingdienst/imd-20221216/index.html">imd 16 december 2022</a></li>
+        <li><a href="Belastingdienst/goedestart/index.html">goedestart</a></li>
+        <li><a href="lerenvandecoronacrisis/index.html">lerenvandecoronacrisis</a></li>
+        <li>test</li>
+    </ul>
+</body>
+
+</html>
