changed number of issues

--- a/Belastingdienst/imd-20221216/content.html
+++ b/Belastingdienst/imd-20221216/content.html
@@ -77,7 +77,7 @@
             </table>
 
             <h2>Uitgebreide toetsresultaten</h2>
-            <div class="outcome">Aantal bevindingen: 9</div>
+            <div class="outcome">Aantal bevindingen: 3</div>
             <h3 id="perceivable">1. Waarneembaar</h3>
             <h4 id="text-alternatives">1.1 Tekstalternatieven</h4>
             <h5 id="non-text-content">1.1.1 Niet-tekstuele content (Niveau A)</h5>
@@ -93,6 +93,9 @@
                 is onderdeel van een afbeelding. Deze afbeelding heeft geen alternatieve tekst. Hierdoor is de
                 informatie in de afbeelding niet beschikbaar voor bezoekers die het scherm niet kunnen zien. Zie
                 daarnaast ook succescriterium 1.4.5.</p>
+            <div class="solution">
+                <p>Vul hier een goede alt tekst in.</p>
+            </div>
             <h4 id="adaptable">1.3 Aanpasbaar</h4>
             <h5 id="info-and-relationships">1.3.1 Info en relaties (Niveau A)</h5>
             <p class="readMore">Informatie over succescriterium <a
@@ -109,6 +112,10 @@
                 th-element (table header). Hierdoor is er voor bezoekers die het scherm niet kunnen zien geen relatie
                 tussen de kopcellen en de datacellen. Maak gebruik van de juiste tabelstructuur om dit probleem op te
                 lossen.</p>
+            <div class="solution">
+                <p>Bouw deze tabel op in de pleio editor. Cellen samenvoegen kan nu, dus alles kan correct worden
+                    opgemaakt.</p>
+            </div>
             <h4 id="distinguishable">1.4 Onderscheidbaar</h4>
             <h5 id="images-of-text">1.4.5 Afbeeldingen van tekst (Niveau AA)</h5>
             <p class="readMore">Informatie over succescriterium <a href="https://www.w3.org/TR/WCAG21/#images-of-text"
