--- a/lerenvandecoronacrisis/discussie.html
+++ b/lerenvandecoronacrisis/discussie.html
@@ -59,6 +59,11 @@
       <h5 id="non-text-content">1.1.1 Niet-tekstuele content (Niveau A)</h5>
       <p class="readMore">Informatie over succescriterium <a href="https://www.w3.org/TR/WCAG21/#non-text-content"
           target="_blank">1.1.1 Niet-tekstuele content</a></p>
+      <p><strong>Bevinding 2:</strong> Op onder andere pagina <a target="_blank" class="urlBreak" rel="nofollow"
+          href="https://lerenvandecoronacrisis.nl/search?tags=werk%2Farbeidsmarkt%2Cgeld%2Feconomie">lerenvandecoronacrisis.nl/search</a>
+        kunnen bezoekers de voorgeselecteerde filters, zoals 'geld/economie' verwijderen met de x-knop. Dit is een
+        svg-element zonder alternatieve tekst binnen het title-element. Hierdoor is er geen alternatieve tekst
+        beschikbaar voor hulpsoftware. Zie ook succescriterium 4.1.2.</p>
       <div class="outcome">
         <p class="failed">
           Uitkomst: Onvoldoende
@@ -72,6 +77,32 @@
         toegankelijke naam omdat het aria-labelledby attribuut geen valide waarde heeft en het label niet correct
         gekoppeld is aan het input-element met for en id. Geef het invoerveld bij voorkeur één beschrijvende naam door
         het label correct te koppelen. Dit probleem komt op meerdere pagina's voor, waaronder op pagina:</p>
+      <ul>
+        <li><a target="_blank" class="urlBreak" rel="nofollow"
+            href="https://lerenvandecoronacrisis.nl/cms/view/1b42f66f-947d-46c1-b6ed-3a65dcbca994/onderzoeken-in-opdracht-van-rijksoverheid">lerenvandecoronacrisis.nl/cms/view/1b42f66f-947d-46c1-b6ed-3a65dcbca994/onderzoeken-in-opdracht-van-&hellip;</a>
+        </li>
+        <li><a target="_blank" class="urlBreak" rel="nofollow"
+            href="https://lerenvandecoronacrisis.nl/user/20256df2-bdcd-4ea2-90cb-b459f6d78fc9/settings">lerenvandecoronacrisis.nl/user/20256df2-bdcd-4ea2-90cb-b459f6d78fc9/settings</a>
+        </li>
+      </ul>
+      <h4 id="adaptable">1.3 Aanpasbaar</h4>
+      <h5 id="info-and-relationships">1.3.1 Info en relaties (Niveau A)</h5>
+      <p class="readMore">Informatie over succescriterium <a href="https://www.w3.org/TR/WCAG21/#info-and-relationships"
+          target="_blank">1.3.1 Info en relaties</a></p>
+      <div class="outcome">
+        <p class="failed">
+          Uitkomst: Onvoldoende
+        </p>
+      </div>
+
+      <p><strong>Bevinding 7:</strong> Deze bevinding is mogelijk technisch van aard:</p>
+      <p>De selectievakjes onder de verschillende comboboxen (filteropties) op pagina <a target="_blank"
+          class="urlBreak" rel="nofollow"
+          href="https://lerenvandecoronacrisis.nl/search?q=vaccinatie">lerenvandecoronacrisis.nl/search</a> hebben geen
+        toegankelijke naam omdat er geen label aanwezig is, maar de bijstaande tekst is toegevoegd binnen een
+        div-element. Hierdoor weten bezoekers die gebruik maken van voorleesssoftware niet wat zij aanvinken. Geef de
+        selectievakjes een label en koppel het met for en id aan de input-elementen. Dit probleem komt op meerdere
+        pagina's voor, waaronder op pagina:</p>
       <ul>
         <li><a target="_blank" class="urlBreak" rel="nofollow"
             href="https://lerenvandecoronacrisis.nl/cms/view/1b42f66f-947d-46c1-b6ed-3a65dcbca994/onderzoeken-in-opdracht-van-rijksoverheid">lerenvandecoronacrisis.nl/cms/view/1b42f66f-947d-46c1-b6ed-3a65dcbca994/onderzoeken-in-opdracht-van-&hellip;</a>
