--- a/lerenvandecoronacrisis/leverancier.html
+++ b/lerenvandecoronacrisis/leverancier.html
@@ -68,22 +68,9 @@
         elementen, zoals een &lt;div>, kan dit problemen geven bij hulpsoftware. Koppel de alternatieve tekst daarom op
         een andere manier.
         .</p>
-      <p><strong>Bevinding 2:</strong> Op onder andere pagina <a target="_blank" class="urlBreak" rel="nofollow"
-          href="https://lerenvandecoronacrisis.nl/search?tags=werk%2Farbeidsmarkt%2Cgeld%2Feconomie">lerenvandecoronacrisis.nl/search</a>
-        kunnen bezoekers de voorgeselecteerde filters, zoals 'geld/economie' verwijderen met de x-knop. Dit is een
-        svg-element zonder alternatieve tekst binnen het title-element. Hierdoor is er geen alternatieve tekst
-        beschikbaar voor hulpsoftware. Zie ook succescriterium 4.1.2.</p>
-      <h4 id="time-based-media">1.2 Op tijd gebaseerde media</h4>
-      <h5 id="audio-description-or-media-alternative-prerecorded">1.2.3 Audiodescriptie of media-alternatief (vooraf
-        opgenomen) (Niveau A)</h5>
-      <p class="readMore">Informatie over succescriterium <a
-          href="https://www.w3.org/TR/WCAG21/#audio-description-or-media-alternative-prerecorded" target="_blank">1.2.3
-          Audiodescriptie of media-alternatief (vooraf opgenomen)</a></p>
-      <div class="outcome">
-        <p class="failed">
-          Uitkomst: Onvoldoende
-        </p>
-      </div>
+      <p><a href="https://gitlab.com/pleio/beheer/-/issues/11562">11562</a></p>
+
+
 
 
       <h4 id="adaptable">1.3 Aanpasbaar</h4>
@@ -96,22 +83,7 @@
         </p>
       </div>
 
-      <p><strong>Bevinding 7:</strong> Deze bevinding is mogelijk technisch van aard:</p>
-      <p>De selectievakjes onder de verschillende comboboxen (filteropties) op pagina <a target="_blank"
-          class="urlBreak" rel="nofollow"
-          href="https://lerenvandecoronacrisis.nl/search?q=vaccinatie">lerenvandecoronacrisis.nl/search</a> hebben geen
-        toegankelijke naam omdat er geen label aanwezig is, maar de bijstaande tekst is toegevoegd binnen een
-        div-element. Hierdoor weten bezoekers die gebruik maken van voorleesssoftware niet wat zij aanvinken. Geef de
-        selectievakjes een label en koppel het met for en id aan de input-elementen. Dit probleem komt op meerdere
-        pagina's voor, waaronder op pagina:</p>
-      <ul>
-        <li><a target="_blank" class="urlBreak" rel="nofollow"
-            href="https://lerenvandecoronacrisis.nl/cms/view/1b42f66f-947d-46c1-b6ed-3a65dcbca994/onderzoeken-in-opdracht-van-rijksoverheid">lerenvandecoronacrisis.nl/cms/view/1b42f66f-947d-46c1-b6ed-3a65dcbca994/onderzoeken-in-opdracht-van-&hellip;</a>
-        </li>
-        <li><a target="_blank" class="urlBreak" rel="nofollow"
-            href="https://lerenvandecoronacrisis.nl/user/20256df2-bdcd-4ea2-90cb-b459f6d78fc9/settings">lerenvandecoronacrisis.nl/user/20256df2-bdcd-4ea2-90cb-b459f6d78fc9/settings</a>
-        </li>
-      </ul>
+
       <p><strong>Bevinding 8:</strong> Deze bevinding is mogelijk technisch van aard:</p>
       <p>Op pagina <a target="_blank" class="urlBreak" rel="nofollow"
           href="https://lerenvandecoronacrisis.nl/cms/view/38879b37-6b52-481a-8b3b-90e752942ebf/toegankelijkheid">lerenvandecoronacrisis.nl/cms/view/38879b37-6b52-481a-8b3b-90e752942ebf/toegankelijkheid</a>
@@ -130,6 +102,7 @@
             href="https://lerenvandecoronacrisis.nl/cms/view/5fbda46e-d1b3-497d-add5-90b17c0b7621/kwetsbaarheid-melden">lerenvandecoronacrisis.nl/cms/view/5fbda46e-d1b3-497d-add5-90b17c0b7621/kwetsbaarheid-melden</a>
         </li>
       </ul>
+      <p><a href="https://gitlab.com/pleio/beheer/-/issues/11563">11563</a></p>
 
       <h4 id="distinguishable">1.4 Onderscheidbaar</h4>
       <h5 id="use-of-color">1.4.1 Gebruik van kleur (Niveau A)</h5>
@@ -146,14 +119,8 @@
         is alleen herkenbaar van de omringende tekst door een kleurwijziging. Kleur mag niet als enige visuele middel
         gebruikt worden om informatie over te brengen, een actie aan te geven, tot een reactie op te roepen of een
         visueel element te onderscheiden.</p>
-      <h5 id="contrast-minimum">1.4.3 Contrast (minimum) (Niveau AA)</h5>
-      <p class="readMore">Informatie over succescriterium <a href="https://www.w3.org/TR/WCAG21/#contrast-minimum"
-          target="_blank">1.4.3 Contrast (minimum)</a></p>
-      <div class="outcome">
-        <p class="failed">
-          Uitkomst: Onvoldoende
-        </p>
-      </div>
+      <p><a href="https://gitlab.com/pleio/beheer/-/issues/11564">11564</a></p>
+
       <h4 id="input-modalities">2.5 Input modaliteiten</h4>
       <h5 id="label-in-name">2.5.3 Label in naam (Niveau A)</h5>
       <p class="readMore">Informatie over succescriterium <a href="https://www.w3.org/TR/WCAG21/#label-in-name"
@@ -168,6 +135,7 @@
         komen meerdere visuele 'Lees meer' linkteksten voor. Deze teksten komen niet voor in toegankelijke linknamen.
         Hierdoor zijn de links moeilijk of niet bedienbaar voor bezoekers die gebruik maken van spraakgestuurde
         navigatie. Verwijder de teksten, of verwerk ze in de toegankelijke linknamen om dit probleem op te lossen,</p>
+      <p><a href="https://gitlab.com/pleio/beheer/-/issues/11565">11565</a></p>
 
 
   </div>
