made more simple

--- a/lerenvandecoronacrisis/leverancier.html
+++ b/lerenvandecoronacrisis/leverancier.html
@@ -54,13 +54,7 @@
       <h3 id="perceivable">1. Waarneembaar</h3>
       <h4 id="text-alternatives">1.1 Tekstalternatieven</h4>
       <h5 id="non-text-content">1.1.1 Niet-tekstuele content (Niveau A)</h5>
-      <p class="readMore">Informatie over succescriterium <a href="https://www.w3.org/TR/WCAG21/#non-text-content"
-          target="_blank">1.1.1 Niet-tekstuele content</a></p>
-      <div class="outcome">
-        <p class="failed">
-          Uitkomst: Onvoldoende
-        </p>
-      </div>
+
       <p><strong>Bevinding 1:</strong> Op pagina <a target="_blank" class="urlBreak" rel="nofollow"
           href="https://lerenvandecoronacrisis.nl/cms/view/0e1d422d-4165-420a-91f8-9263a9ef7f10/programmadirectie-evaluatie-en-samenleving-covid-19">lerenvandecoronacrisis.nl/cms/view/0e1d422d-4165-420a-91f8-9263a9ef7f10/programmadirectie-evaluatie-&hellip;</a>
         staan meerdere afbeeldingen. Deze hebben een alternatieve tekst gekregen via een aria-describedby label op
@@ -68,21 +62,13 @@
         elementen, zoals een &lt;div>, kan dit problemen geven bij hulpsoftware. Koppel de alternatieve tekst daarom op
         een andere manier.
         .</p>
-      <p><a href="https://gitlab.com/pleio/beheer/-/issues/11562">11562</a></p>
+      <p class="issue"><a href="https://gitlab.com/pleio/beheer/-/issues/11562">11562</a></p>
 
 
 
 
       <h4 id="adaptable">1.3 Aanpasbaar</h4>
       <h5 id="info-and-relationships">1.3.1 Info en relaties (Niveau A)</h5>
-      <p class="readMore">Informatie over succescriterium <a href="https://www.w3.org/TR/WCAG21/#info-and-relationships"
-          target="_blank">1.3.1 Info en relaties</a></p>
-      <div class="outcome">
-        <p class="failed">
-          Uitkomst: Onvoldoende
-        </p>
-      </div>
-
 
       <p><strong>Bevinding 8:</strong> Deze bevinding is mogelijk technisch van aard:</p>
       <p>Op pagina <a target="_blank" class="urlBreak" rel="nofollow"
@@ -102,40 +88,28 @@
             href="https://lerenvandecoronacrisis.nl/cms/view/5fbda46e-d1b3-497d-add5-90b17c0b7621/kwetsbaarheid-melden">lerenvandecoronacrisis.nl/cms/view/5fbda46e-d1b3-497d-add5-90b17c0b7621/kwetsbaarheid-melden</a>
         </li>
       </ul>
-      <p><a href="https://gitlab.com/pleio/beheer/-/issues/11563">11563</a></p>
+      <p class="issue"><a href="https://gitlab.com/pleio/beheer/-/issues/11563">11563</a></p>
 
       <h4 id="distinguishable">1.4 Onderscheidbaar</h4>
       <h5 id="use-of-color">1.4.1 Gebruik van kleur (Niveau A)</h5>
-      <p class="readMore">Informatie over succescriterium <a href="https://www.w3.org/TR/WCAG21/#use-of-color"
-          target="_blank">1.4.1 Gebruik van kleur</a></p>
-      <div class="outcome">
-        <p class="failed">
-          Uitkomst: Onvoldoende
-        </p>
-      </div>
+
       <p><strong>Bevinding 10:</strong> De link 'account.pleio.nl' op pagina <a target="_blank" class="urlBreak"
           rel="nofollow"
           href="https://lerenvandecoronacrisis.nl/user/20256df2-bdcd-4ea2-90cb-b459f6d78fc9/settings">lerenvandecoronacrisis.nl/user/20256df2-bdcd-4ea2-90cb-b459f6d78fc9/settings</a>
         is alleen herkenbaar van de omringende tekst door een kleurwijziging. Kleur mag niet als enige visuele middel
         gebruikt worden om informatie over te brengen, een actie aan te geven, tot een reactie op te roepen of een
         visueel element te onderscheiden.</p>
-      <p><a href="https://gitlab.com/pleio/beheer/-/issues/11564">11564</a></p>
+      <p class="issue"><a href="https://gitlab.com/pleio/beheer/-/issues/11564">11564</a></p>
 
       <h4 id="input-modalities">2.5 Input modaliteiten</h4>
       <h5 id="label-in-name">2.5.3 Label in naam (Niveau A)</h5>
-      <p class="readMore">Informatie over succescriterium <a href="https://www.w3.org/TR/WCAG21/#label-in-name"
-          target="_blank">2.5.3 Label in naam</a></p>
-      <div class="outcome">
-        <p class="failed">
-          Uitkomst: Onvoldoende
-        </p>
-      </div>
+
       <p><strong>Bevinding 14:</strong> Op pagina <a target="_blank" class="urlBreak" rel="nofollow"
           href="https://lerenvandecoronacrisis.nl/cms/view/d55a4ac7-8780-4385-a28d-9bc355758a09/themas">lerenvandecoronacrisis.nl/cms/view/d55a4ac7-8780-4385-a28d-9bc355758a09/themas</a>
         komen meerdere visuele 'Lees meer' linkteksten voor. Deze teksten komen niet voor in toegankelijke linknamen.
         Hierdoor zijn de links moeilijk of niet bedienbaar voor bezoekers die gebruik maken van spraakgestuurde
         navigatie. Verwijder de teksten, of verwerk ze in de toegankelijke linknamen om dit probleem op te lossen,</p>
-      <p><a href="https://gitlab.com/pleio/beheer/-/issues/11565">11565</a></p>
+      <p class="issue"><a href="https://gitlab.com/pleio/beheer/-/issues/11565">11565</a></p>
 
 
   </div>
