--- a/Belastingdienst/imd-20221216/leverancier.html
+++ b/Belastingdienst/imd-20221216/leverancier.html
@@ -81,25 +81,20 @@
             <h3 id="perceivable">1. Waarneembaar</h3>
             <h4 id="adaptable">1.3 Aanpasbaar</h4>
             <h5 id="info-and-relationships">1.3.1 Info en relaties (Niveau A)</h5>
-            <p class="readMore">Informatie over succescriterium <a
-                    href="https://www.w3.org/TR/WCAG21/#info-and-relationships" target="_blank">1.3.1 Info en
-                    relaties</a></p>
-            <div class="outcome">
-                <p class="failed">
-                    Uitkomst: Onvoldoende
-                </p>
-            </div>
+
             <p><strong>Bevinding 3:</strong> Deze bevinding vereist mogelijk een technische oplossing:<br>Het
                 tekstinvoerveld 'Inleiding' op pagina <a target="_blank" class="urlBreak" rel="nofollow"
                     href="https://imd.pleio.nl/questions/add">imd.pleio.nl/questions/add</a> hebben geen label. Hierdoor
                 weten bezoekers die het scherm niet kunnen zien wat er van hen verwacht wordt. Geef het invoerveld een
                 naam, bijvoorbeeld met een label-element (voor een input-element) of een aria-label.</p>
+            <p class="issue"><a href="https://gitlab.com/pleio/beheer/-/issues/11121">11121</a></p>
             <p><strong>Bevinding 4:</strong> Deze bevinding vereist mogelijk een technische oplossing:<br>Op pagina <a
                     target="_blank" class="urlBreak" rel="nofollow"
                     href="https://imd.pleio.nl/questions/add">imd.pleio.nl/questions/add</a> staan onder 'Instellingen'
                 een groep keuzerondjes. Deze keuzerondjes hebben geen label, omdat het aanwezige label niet impliciet of
                 expliciet gekoppeld is aan het keuzerondje. Bezoekers die het scherm niet kunnen zien, weten daarom niet
                 waar de keuzerondjes voor dienen. Geef de keuzerondjes een label om dit probleem op te lossen.</p>
+            <p class="issue"><a href="https://gitlab.com/pleio/beheer/-/issues/11117">11117</a></p>
             <p><strong>Bevinding 5:</strong> Deze bevinding vereist mogelijk een technische oplossing:<br>Op pagina <a
                     target="_blank" class="urlBreak" rel="nofollow"
                     href="https://imd.pleio.nl/questions/add">imd.pleio.nl/questions/add</a> staan onder 'Instellingen'
@@ -107,70 +102,39 @@
                 label aanwezig, maar dit is geen geschikt element om een groep elementen te beschrijven. Gebruik een
                 fieldset en legend combinatie om de keuzerondjes te groeperen. Een zelfde probleem komt voor onder
                 'Inplannen' met de labels 'Archiveer' en 'Verwijder'.</p>
-            <h4 id="distinguishable">1.4 Onderscheidbaar</h4>
-            <h5 id="images-of-text">1.4.5 Afbeeldingen van tekst (Niveau AA)</h5>
-            <p class="readMore">Informatie over succescriterium <a href="https://www.w3.org/TR/WCAG21/#images-of-text"
-                    target="_blank">1.4.5 Afbeeldingen van tekst</a></p>
-            <div class="outcome">
-                <p class="failed">
-                    Uitkomst: Onvoldoende
-                </p>
-            </div>
-            <p><strong>Bevinding 6:</strong> De titel van pagina <a target="_blank" class="urlBreak" rel="nofollow"
-                    href="https://imd.pleio.nl/cms/view/56bba82a-926e-402a-9cd3-937e956fbf74/inkomstenbelasting">imd.pleio.nl/cms/view/56bba82a-926e-402a-9cd3-937e956fbf74/inkomstenbelasting</a>
-                is onderdeel van een afbeelding. Voor bezoekers met een visuele beperking is het belangrijk dat tekst
-                als HTML wordt geplaatst en niet in een afbeelding. Zij kunnen tekst in HTML namelijk met een eigen
-                stylesheet naar hun wensen opmaken, terwijl tekst in een afbeelding niet aanpasbaar is. Plaats de titel
-                van de pagina ook als gewone h1-tekst op de pagina om dit probleem op te lossen.</p>
+            <p class="issue"><a href="https://gitlab.com/pleio/beheer/-/issues/11118">11118</a></p>
             <h3 id="operable">2. Bedienbaar</h3>
             <h4 id="navigable">2.4 Navigeerbaar</h4>
             <h5 id="link-purpose-in-context">2.4.4 Linkdoel (in context) (Niveau A)</h5>
-            <p class="readMore">Informatie over succescriterium <a
-                    href="https://www.w3.org/TR/WCAG21/#link-purpose-in-context" target="_blank">2.4.4 Linkdoel (in
-                    context)</a></p>
-            <div class="outcome">
-                <p class="failed">
-                    Uitkomst: Onvoldoende
-                </p>
-            </div>
+
             <p><strong>Bevinding 7:</strong> Op pagina <a target="_blank" class="urlBreak" rel="nofollow"
                     href="https://imd.pleio-test.nl/cms/view/7f7209f7-33be-4065-9607-56700e5a585b/community">imd.pleio-test.nl/cms/view/7f7209f7-33be-4065-9607-56700e5a585b/community</a>
                 komt een afbeelding voor die linkt naar dezelfde pagina als 'Stel een vraag'. De afbeelding heeft geen
                 alternatieve tekst, waardoor er geen toegankelijk linkdoel is. Aangezien de link naar precies dezelfde
                 pagina verwijst is het hier gewenst de dubbele link te verwijderen.</p>
+            <p class="issue"><a href="https://gitlab.com/pleio/beheer/-/issues/11566">11566</a></p>
             <h3 id="understandable">3. Begrijpelijk</h3>
             <h4 id="input-assistance">3.3 Assistentie bij invoer</h4>
             <h5 id="labels-or-instructions">3.3.2 Labels of instructies (Niveau A)</h5>
-            <p class="readMore">Informatie over succescriterium <a
-                    href="https://www.w3.org/TR/WCAG21/#labels-or-instructions" target="_blank">3.3.2 Labels of
-                    instructies</a></p>
-            <div class="outcome">
-                <p class="failed">
-                    Uitkomst: Onvoldoende
-                </p>
-            </div>
+
             <p><strong>Bevinding 8:</strong> Op pagina <a target="_blank" class="urlBreak" rel="nofollow"
                     href="https://imd.pleio.nl/questions/add">imd.pleio.nl/questions/add</a> wordt met een asterisk (*)
                 aangegeven dat een veld verplicht is. Wanneer bezoekers met de muis over het teken hoveren, verschijnt
                 de melding 'Verplicht'. Voor bezoekers die gebruik maken van het toetsenbord is deze melding niet
                 beschikbaar. Zorg ervoor dat labels en instructies permanent zichtbaar zijn en niet afhankelijk zijn van
                 invoerapparaten.</p>
+            <p class="issue"><a href="https://gitlab.com/pleio/beheer/-/issues/11119">11119</a></p>
             <h3 id="robust">4. Robuust</h3>
             <h4 id="compatible">4.1 Compatibel</h4>
             <h5 id="name-role-value">4.1.2 Naam, rol, waarde (Niveau A)</h5>
-            <p class="readMore">Informatie over succescriterium <a href="https://www.w3.org/TR/WCAG21/#name-role-value"
-                    target="_blank">4.1.2 Naam, rol, waarde</a></p>
-            <div class="outcome">
-                <p class="failed">
-                    Uitkomst: Onvoldoende
-                </p>
-            </div>
+
             <p><strong>Bevinding 9:</strong> Deze bevinding vereist mogelijk een technische oplossing:<br>Het
                 tekstinvoerveld 'Inleiding' op pagina <a target="_blank" class="urlBreak" rel="nofollow"
                     href="https://imd.pleio.nl/questions/add">imd.pleio.nl/questions/add</a> hebben geen toegankelijk
                 rol. Daarnaast is het invoerveld ook niet gekoppeld aan het visuele label, waardoor er geen
                 toegankelijke naam beschikbaar is (zie ook SC 1.3.1). Geef het invoerveld een goede rol, bijvoorbeeld
                 met het role-attribuut of door deze op te maken met het input-element.</p>
+            <p class="issue"><a href="https://gitlab.com/pleio/beheer/-/issues/11096">11096</a></p>
 
         </main>
     </div>
