--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         <li><a href="Belastingdienst/imd-20221004/index.html">imd 4 oktober 2022</a></li>
         <li><a href="Belastingdienst/imd-20221216/index.html">imd 16 december 2022</a></li>
         <li><a href="Belastingdienst/goedestart/index.html">goedestart</a></li>
+        <li><a href="Belastingdienst/anbi-loket/index.html">Anbi loket</a></li>
         <li><a href="lerenvandecoronacrisis/index.html">lerenvandecoronacrisis</a></li>
-        <li>test</li>
+        <li><a href="ibds/index.html">Realisatie IDBS</a></li>
+        <li><a href="formulieren/index.html">Formulieren pleio</a></li>
     </ul>
 </body>
 
