added style for solved issues.

--- a/Belastingdienst/anbi-loket/leverancier.html
+++ b/Belastingdienst/anbi-loket/leverancier.html
@@ -153,7 +153,7 @@
                 onterecht gebruikt op het &lt;time> element op pagina <a target="_blank" class="urlBreak" rel="nofollow"
                     href="https://anbiloketbelastingdienst.nl/user/fb23399e-787a-4c8a-94fa-a423d8ee994a/notifications">anbiloketbelastingdienst.nl/user/fb23399e-787a-4c8a-94fa-a423d8ee994a/notifications</a>
                 .</p>
-            <p class="issue"><a href="https://gitlab.com/pleio/beheer/-/issues/12089">12089</a></p>
+            <p class="issue solved"><a href="https://gitlab.com/pleio/beheer/-/issues/12089">12089</a></p>
             <h5 id="status-messages">4.1.3 Statusberichten (Niveau AA)</h5>
             <p class="readMore">Informatie over succescriterium <a href="https://www.w3.org/TR/WCAG21/#status-messages"
                     target="_blank">4.1.3 Statusberichten</a></p>
