--- a/Belastingdienst/anbi-loket-20240202/index.html
+++ b/Belastingdienst/anbi-loket-20240202/index.html
@@ -132,7 +132,7 @@
                     Uitkomst: Onvoldoende
                 </p>
             </div>
-            <p><strong>Bevinding 3:</strong> Op pagina <a target="_blank" class="urlBreak" rel="nofollow"
+            <p class="content"><strong>Bevinding 3:</strong> Op pagina <a target="_blank" class="urlBreak" rel="nofollow"
                     href="https://stichtingenenverenigingenloket.nl/cms/view/c215af04-677b-4e58-8ca9-6a5e9bfe0809/kor">stichtingenenverenigingenloket.nl/cms/view/c215af04-677b-4e58-8ca9-6a5e9bfe0809/kor</a>
                 is er in de video aan het begin een tekst in beeld: 'De nieuwe kleineondernemersregeling' en het logo
                 van de Belastingdienst. Er ontbreekt een voice-over die vertelt wat er op het scherm staat. Zo kunnen
