--- a/pleio/index.html
+++ b/pleio/index.html
@@ -101,7 +101,7 @@
         op te splitsen per individueel logo, of plaats een bijschrijft gekoppeld aan de afbeelding middels het
         fig-caption element.</p>
 
-      <p class="platform"><strong>Bevinding 3:</strong> Op pagina <a target="_blank" class="urlBreak" rel="nofollow"
+      <p class="discussion"><strong>Bevinding 3:</strong> Op pagina <a target="_blank" class="urlBreak" rel="nofollow"
           href="https://pleio.nl/news/view/f133fd31-fd28-450c-8e4b-a66ef0573aff/maak-kennis-met-onze-organisatie-in-onze-nieuwe-video">pleio.nl/news/view/f133fd31-fd28-450c-8e4b-a66ef0573aff/maak-kennis-met-onze-organisatie-in-onze-&hellip;</a>
         staat een video in de banner bovenaan. De video heeft geen naam. Indien men met het toetsenbord navigeert wordt
         door schermleessoftware slechts 'Speel video af' voorgelezen, een tekst dat middels een aria-label op de
@@ -114,7 +114,7 @@
         kunnen zien. Er is een aria-label met de tekst ‘126 keer bekeken’ toegevoegd aan het div-element waarin het
         icoon staat, maar dit kan niet worden voorgelezen omdat een aria-label niet functioneert op een div-element
         zonder rol. Los dit bijvoorbeeld op door het aria-hidden attribuut te verwijderen van de svg-afbeelding, en hier
-        een alternatieve tekst aan toe te voegen in een title-attribuut als eerste child-element.</p>
+        een alternatieve tekst aan toe te voegen in een title-attribuut als eerste child-element.<br/>https://gitlab.com/pleio/beheer/-/issues/17748</p>
       <h4 id="adaptable">1.3 Aanpasbaar</h4>
       <h5 id="info-and-relationships">1.3.1 Info en relaties (Niveau A)</h5>
       <p class="readMore">Informatie over succescriterium <a href="https://www.w3.org/TR/WCAG21/#info-and-relationships"
@@ -219,7 +219,8 @@
           href="https://pleio.nl/">pleio.nl/</a> staat bij bij kop ‘Certificering van ISO 27001 en ISO 27701’ een
         afbeelding van ISO-keurmerken. De afbeelding is tevens een link naar de website van BrandCompliance. Doordat het
         element de attributen tabindex=”-1” en aria-hidden=”true” bevat, is deze link niet middels het toetsenbord
-        bereikbaar. Maak dit tevens toegankelijk.</p>
+        bereikbaar. Maak dit tevens toegankelijk.<br/>
+      <a href="https://gitlab.com/pleio/beheer/-/issues/17826">issue 17826</a>aangemaakt</p>
       <h5 id="character-key-shortcuts">2.1.4 Enkel teken sneltoets (Niveau A)</h5>
       <p class="readMore">Informatie over succescriterium <a
           href="https://www.w3.org/TR/WCAG21/#character-key-shortcuts" target="_blank">2.1.4 Enkel teken sneltoets</a>
