--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="lerenvandecoronacrisis/index.html">lerenvandecoronacrisis</a></li>
         <li><a href="ibds/index.html">Realisatie IDBS</a></li>
         <li><a href="formulieren/index.html">Formulieren pleio</a></li>
+        <li><a href="intergraleaanpakonlinefraude/index.html">Integrale aanpak online fraude</a></li>
     </ul>
 </body>
 
